[gd_scene load_steps=8 format=3 uid="uid://bulko4dvr0x40"]

[ext_resource type="PackedScene" uid="uid://bgflm2vwp10yo" path="res://Scenes/PlayerSide.tscn" id="1_crjyo"]
[ext_resource type="Script" path="res://Scripts/Control/GameController.gd" id="1_kkolv"]
[ext_resource type="Script" path="res://Scenes/SwitchSidesButtonHandler.gd" id="3_bbeg0"]
[ext_resource type="FontFile" uid="uid://mbdgiob7hoy2" path="res://Resources/04B_30__.TTF" id="3_dheht"]
[ext_resource type="PackedScene" uid="uid://cxkguej31k3x5" path="res://Scenes/Buttons/change_scene_button.tscn" id="4_jg0mx"]
[ext_resource type="Texture2D" uid="uid://diegnee1nto6f" path="res://Resources/Individual Icons/silver-X.png" id="6_0bfck"]
[ext_resource type="Texture2D" uid="uid://cwr454c12nlxc" path="res://Resources/Individual Icons/silver-X-pushed.png" id="7_04fv2"]

[node name="Game" type="Node2D"]
script = ExtResource("1_kkolv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Player1" parent="CanvasLayer/HBoxContainer" instance=ExtResource("1_crjyo")]
layout_mode = 2
metadata/PlayerColor = Color(0.211378, 0.474405, 1, 1)

[node name="Player2" parent="CanvasLayer/HBoxContainer" instance=ExtResource("1_crjyo")]
layout_mode = 2
metadata/PlayerColor = Color(0.89298, 0, 0.275608, 1)

[node name="SwitchSidesButton" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.948148
anchor_right = 0.1
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("3_dheht")
theme_override_font_sizes/font_size = 30
text = "Switch Sides"
script = ExtResource("3_bbeg0")
metadata/_edit_use_anchors_ = true

[node name="RestartGameButton" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.9
anchor_top = 0.948148
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("3_dheht")
theme_override_font_sizes/font_size = 30
text = "Restart"
metadata/_edit_use_anchors_ = true

[node name="ChangeSceneButton" parent="CanvasLayer" instance=ExtResource("4_jg0mx")]
anchors_preset = -1
anchor_right = 0.0166667
anchor_bottom = 0.0296296
offset_right = 0.0
offset_bottom = 0.0
texture_normal = ExtResource("6_0bfck")
texture_pressed = ExtResource("7_04fv2")
stretch_mode = 0
metadata/SceneToChangeToPath = "res://Scenes/Main.tscn"
metadata/_edit_use_anchors_ = true

[node name="ResetScoreButton" type="Button" parent="CanvasLayer"]
offset_left = 768.0
offset_top = 1024.0
offset_right = 1152.0
offset_bottom = 1080.0
theme_override_fonts/font = ExtResource("3_dheht")
theme_override_font_sizes/font_size = 30
text = "Reset Score"

[connection signal="button_up" from="CanvasLayer/SwitchSidesButton" to="." method="_on_switch_sides_button_button_up"]
[connection signal="button_up" from="CanvasLayer/RestartGameButton" to="." method="_on_restart_game_button_button_up"]
[connection signal="button_up" from="CanvasLayer/ResetScoreButton" to="." method="_on_reset_score_button_button_up"]
